--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     background: var(--gradient-dark);
     color: var(--text-color-secondary);
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start; /* Align items to the left */
     align-items: center;
     position: fixed;
     top: 0;
@@ -55,17 +55,29 @@ body {
     padding: 15px 30px;
     z-index: 1000;
     box-shadow: var(--shadow-md);
-    border-radius: 0 0 10px 0px; /* Rounded corners at the bottom */
+    border-radius: 0 0 10px 0px; /* Rounded corners at the bottom right */
 }
 
-.navbar-brand {
+.navbar .open-btn { /* Style the menu button */
+    cursor: pointer;
+    margin-right: 10px; /* Add some spacing between the button and the text */
+    height: 45px;
+    width: 45px; /* Adjust size as needed */
+    /* You might want to add width or aspect-ratio for better control */
+    /* width: 30px; */
+    /* aspect-ratio: 1 / 1; */
+}
+
+.navbar span { /* Style the website title */
     font-size: 1.8em;
+
+    margin-left: 45px;
     font-weight: bold;
     text-shadow: var(--shadow-sm);
     transition: transform var(--transition-fast);
 }
 
-.navbar-brand:hover {
+.navbar span:hover {
     transform: scale(1.1); /* Slight zoom effect */
     color: var(--accent-color);
 }
