--- a/templatecontent.css
+++ b/templatecontent.css
@@ -8,7 +8,7 @@ body {
 
 .container {
     width: 90%;
-    margin: 20px auto;
+    margin: 100px auto 20px; /* Added margin-top: 100px */
 }
 
 .card {
@@ -34,7 +34,7 @@ label {
 }
 
 input, textarea {
-    width: 97%;
+    width: 100%;
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
